Added pdf files

--- a/resume-builder/bin/.gitignore
+++ b/resume-builder/bin/.gitignore
@@ -1,2 +1,12 @@
+/EducationDetails$1.class
+/EducationDetails.class
 /InfoPage$1.class
 /InfoPage.class
+/LanguagesInfo$1.class
+/LanguagesInfo.class
+/SkillsInfo$1.class
+/SkillsInfo.class
+/WorkInfo$1.class
+/WorkInfo.class
+/downloadResume$1.class
+/downloadResume.class
