Added validation and checking empty fields

--- a/resume-builder/bin/.gitignore
+++ b/resume-builder/bin/.gitignore
@@ -10,3 +10,29 @@
 /WorkInfo.class
 /downloadResume$1.class
 /downloadResume.class
+/hii.class
+/InfoPage$2.class
+/InfoPage$3.class
+/InfoPage$4.class
+/InfoPage$5.class
+/InfoPage$6.class
+/InfoPage$7.class
+/InfoPage$8.class
+/EducationDetails$2.class
+/EducationDetails$3.class
+/EducationDetails$4.class
+/WorkInfo$2.class
+/WorkInfo$3.class
+/WorkInfo$4.class
+/WorkInfo$5.class
+/EducationDetails$5.class
+/LanguagesInfo$2.class
+/LanguagesInfo$3.class
+/LanguagesInfo$4.class
+/LanguagesInfo$5.class
+/LanguagesInfo$6.class
+/SkillsInfo$2.class
+/SkillsInfo$3.class
+/SkillsInfo$4.class
+/SkillsInfo$5.class
+/SkillsInfo$6.class
